--- a/scripts/Lenna-Bardia-MCU-Board.ioc
+++ b/scripts/Lenna-Bardia-MCU-Board.ioc
@@ -13,9 +13,9 @@ Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=ETH
-Mcu.IP10=TIM3
-Mcu.IP11=TIM4
-Mcu.IP12=TIM6
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=TIM4
 Mcu.IP13=TIM8
 Mcu.IP14=TIM9
 Mcu.IP15=USART1
@@ -27,7 +27,7 @@ Mcu.IP5=RCC
 Mcu.IP6=SPI2
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
-Mcu.IP9=TIM2
+Mcu.IP9=TIM1
 Mcu.IPNb=17
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
@@ -97,11 +97,13 @@ Mcu.Pin65=PB8
 Mcu.Pin66=PB9
 Mcu.Pin67=PE0
 Mcu.Pin68=PE1
-Mcu.Pin69=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin69=VP_SYS_VS_Systick
 Mcu.Pin7=PC2
+Mcu.Pin70=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin71=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=70
+Mcu.PinsNb=72
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -117,7 +119,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
@@ -352,7 +354,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -424,23 +426,26 @@ SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
+TIM1.IPParameters=Prescaler
+TIM1.Prescaler=168-1
 TIM4.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM4.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM4.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4
-TIM6.IPParameters=Prescaler,Period
-TIM6.Period=0
-TIM6.Prescaler=83
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
 TIM9.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM9.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
-TIM9.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2
+TIM9.IPParameters=Channel-Input_Capture2_from_TI2,Channel-Input_Capture1_from_TI1
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.IPParameters=VirtualMode
 USART2.VirtualMode=VM_ASYNC
-VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
-VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
 isbadioc=false
