✨ [ADD] : Basic Implementation of the Motion Control Header
This commit introduces a modular script to facilitate usage on various microcontrollers and future variations/updates of the LENNA MCU Board. To define a motor, utilize the struct motor_cfgType which encompasses all relevant information - Timer, PWM channel, Digital pins, and ARR value. These values are crucial for microcontroller initialization and motor control.

typedef struct
{
	GPIO_TypeDef * 		MOTOR_1_GPIO;
	uint16_t       		MOTOR_1_PIN;
	GPIO_TypeDef * 		MOTOR_2_GPIO;
	uint16_t       		MOTOR_2_PIN;
	TIM_HandleTypeDef * TIM_PWM_Handle;
	uint32_t 			TIM_PWM_Channel;
	uint32_t 			MAX_ARR;
}motor_cfgType;

The motion.c source code incorporates two active functions: LRL_Motor_Speed and LRL_Motion_Control. The former allows the operation of a single motor at an arbitrary speed defined by the duty cycle of the PWM signal.

The latter specifically caters to Differential Drive robots, accepting a struct argument diffDrive_cfgType that describes the fundamental characteristics of a differential drive robot, such as motor configurations, wheel radius, and the distance between the center of the wheels.

typedef struct
{
	motor_cfgType 	MOTOR_RIGHT;	// Right Motor Config Parameters
	motor_cfgType 	MOTOR_LEFT;		// Left Motor Config Parameters
	uint16_t		WHEEL_RADIUS;	// R Radius of Differential Robot's Wheels
	uint16_t		WHEEL_DISTANC;	// L Distance Between the Center of the Wheels
}diffDrive_cfgType;

For the LRL_Motion_Control function, the second and third inputs represent the speed of the left and right motors, respectively. Negative values are acceptable, as they indicate the opposite direction of rotation.

NOTES AND CONSIDERATIONS:
Further updates and improvements are essential to enhance the current implementation. The following areas require attention:

Initialization function for motors and PWMs: The existing function should be revisited and refined to ensure smooth motor startup and optimal PWM configura

--- a/scripts/Lenna-Bardia-MCU-Board.ioc
+++ b/scripts/Lenna-Bardia-MCU-Board.ioc
@@ -8,6 +8,7 @@ ADC1.master=1
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407VGT6
 Mcu.Family=STM32F4
@@ -101,9 +102,10 @@ Mcu.Pin69=VP_SYS_VS_Systick
 Mcu.Pin7=PC2
 Mcu.Pin70=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin71=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin72=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=72
+Mcu.PinsNb=73
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -428,12 +430,27 @@ SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 TIM1.IPParameters=Prescaler
 TIM1.Prescaler=168-1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IC1Filter=10
+TIM2.IC2Filter=10
+TIM2.IPParameters=Period,AutoReloadPreload,EncoderMode,IC1Filter,IC2Filter
+TIM2.Period=48960
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IC1Filter=10
+TIM3.IC2Filter=10
+TIM3.IPParameters=AutoReloadPreload,EncoderMode,IC1Filter,IC2Filter,Period
+TIM3.Period=48960
 TIM4.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM4.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM4.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4
+TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+TIM8.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Period,Prescaler,AutoReloadPreload
+TIM8.Period=1000
+TIM8.Prescaler=8-1
 TIM9.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM9.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM9.IPParameters=Channel-Input_Capture2_from_TI2,Channel-Input_Capture1_from_TI1
@@ -447,5 +464,7 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
 isbadioc=false
