:sparkles: [ADD] : modified identification in simulink and stm32
- added input speed in simulink and stm32 code
- identified transfer function

--- a/MATLAB/System-Identification/scripts/Lenna-Bardia-MCU-Board.ioc
+++ b/MATLAB/System-Identification/scripts/Lenna-Bardia-MCU-Board.ioc
@@ -122,6 +122,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
