--- a/MATLAB/System-Identification/scripts/Lenna-Bardia-MCU-Board.ioc
+++ b/MATLAB/System-Identification/scripts/Lenna-Bardia-MCU-Board.ioc
@@ -117,6 +117,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C3_ER_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C3_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -146,8 +148,9 @@ PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=Buzzer
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
