--- a/scripts/Lenna-Bardia-MCU-Board.ioc
+++ b/scripts/Lenna-Bardia-MCU-Board.ioc
@@ -17,10 +17,11 @@ Mcu.IP1=ETH
 Mcu.IP10=TIM2
 Mcu.IP11=TIM3
 Mcu.IP12=TIM4
-Mcu.IP13=TIM8
-Mcu.IP14=TIM9
-Mcu.IP15=USART1
-Mcu.IP16=USART2
+Mcu.IP13=TIM5
+Mcu.IP14=TIM8
+Mcu.IP15=TIM9
+Mcu.IP16=USART1
+Mcu.IP17=USART2
 Mcu.IP2=I2C1
 Mcu.IP3=I2C3
 Mcu.IP4=NVIC
@@ -29,7 +30,7 @@ Mcu.IP6=SPI2
 Mcu.IP7=SPI3
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=17
+Mcu.IPNb=18
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE3
@@ -102,10 +103,11 @@ Mcu.Pin69=VP_SYS_VS_Systick
 Mcu.Pin7=PC2
 Mcu.Pin70=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin71=VP_TIM4_VS_ClockSourceINT
-Mcu.Pin72=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin72=VP_TIM5_VS_ClockSourceINT
+Mcu.Pin73=VP_TIM8_VS_ClockSourceINT
 Mcu.Pin8=PC3
 Mcu.Pin9=PA1
-Mcu.PinsNb=73
+Mcu.PinsNb=74
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -115,6 +117,8 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.I2C3_ER_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.I2C3_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -122,6 +126,8 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
@@ -142,8 +148,9 @@ PA15.Locked=true
 PA15.Signal=S_TIM2_CH1_ETR
 PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA4.GPIO_Label=Buzzer
+PA4.GPIO_PuPd=GPIO_PULLDOWN
 PA4.Locked=true
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Label
@@ -356,7 +363,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ETH_Init-ETH-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_SPI2_Init-SPI2-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_TIM4_Init-TIM4-false-HAL-true,12-MX_TIM8_Init-TIM8-false-HAL-true,13-MX_TIM9_Init-TIM9-false-HAL-true,14-MX_USART1_UART_Init-USART1-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_TIM1_Init-TIM1-false-HAL-true,17-MX_TIM5_Init-TIM5-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -433,8 +440,9 @@ TIM1.Prescaler=168-1
 TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.EncoderMode=TIM_ENCODERMODE_TI12
 TIM2.IC1Filter=10
+TIM2.IC1Polarity=TIM_ICPOLARITY_FALLING
 TIM2.IC2Filter=10
-TIM2.IPParameters=Period,AutoReloadPreload,EncoderMode,IC1Filter,IC2Filter
+TIM2.IPParameters=Period,AutoReloadPreload,EncoderMode,IC1Filter,IC2Filter,IC1Polarity
 TIM2.Period=48960
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.EncoderMode=TIM_ENCODERMODE_TI12
@@ -445,6 +453,9 @@ TIM3.Period=48960
 TIM4.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM4.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
 TIM4.IPParameters=Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4
+TIM5.IPParameters=Prescaler,Period
+TIM5.Period=83
+TIM5.Prescaler=10000
 TIM8.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM8.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -464,6 +475,8 @@ VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM5_VS_ClockSourceINT.Mode=Internal
+VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 board=custom
